[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "test-creator-application"
version = "0.1.0"
description = "LangGraph-powered application that generates deterministic Playwright tests from a website."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "langgraph>=0.2.0",
  "openai>=1.40.0",
  "playwright>=1.45.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-playwright>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["build", "config", "llm", "main", "state"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
